--- a/Back-End/.env
+++ b/Back-End/.env
@@ -1,2 +1,3 @@
 PORT=4040
-DB_CNN=mongodb+srv://techweb:3BR10CxlvUXTrx54@cluster0.gou8z.mongodb.net/
+DB_CNN=mongodb+srv://techweb:3BR10CxlvUXTrx54@cluster0.gou8z.mongodb.net/me_anoto
+SECRET_WORD=ClaVeSecReta1234
