--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
+    "check-password-strength": "^2.0.3",
+    "email-validator": "^2.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
