--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^6.12.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.9",
+    "nodemailer": "^6.7.1",
     "nodemon": "^2.0.13"
   }
 }
