--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -18,8 +18,10 @@
     "check-password-strength": "^2.0.3",
     "email-validator": "^2.0.4",
     "material-ui-confirm": "^3.0.2",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.38.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
