--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -18,6 +18,7 @@
     "check-password-strength": "^2.0.3",
     "email-validator": "^2.0.4",
     "material-ui-confirm": "^3.0.2",
+    "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
